# democapsid

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  app.dev.html  app.html  bisection.py  capsid.html  capsid.js  capsid2.html  capsid2.js  env.yml  geometry.html  geometry.js  icosahedron.html  icosahedron.js  index.html  net.html  package-lock.json  package.json  path.html  sketch.html  standalone.sh
.github/workflows/: cffconvert.yml  draft-pdf.yml  jest.yml
blender/: README.md  package.py  requirements.txt
blender/blendocapsid/: __init__.py  operators.py  panels.py  patch.py  reload.py
css/: app.css  index.css
democapsid/: README.md  capsid.py  pyproject.toml
democapsid/src/: capsid.py  democapsid.py
etc/: bisection.py  intersection.xlsx
js/: app.js  capsid.js  capsid2.js  democapsid.app.js  democapsid.js  democapsid.min.js  graph.js  icosahedron.js  index.js  linalg.js  main.js  net.js  scrap.js  sketch.js  tiles.js
js/lib/paper/: paper-core.min.js
paper/: bibliography.bib  bioinfo.cls  figure.pptx  paper.Rmd  paper.bib  paper.docx  paper.md
poster/: poster2022.docx
py/: README.rst  pyproject.toml
py/src/democapsid/: __init__.py  __main__.py  cli.py  democapsid.py
test/: capsid.test.js  democapsid.test.js
